# Job-Recommendation-System-using-Generative-AI

./: README.md  app.py  helper.py  pyproject.toml  requirement.txt
src/: job_api.py
